deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexgo-server
  namespace: alexgo-cloud
spec:
  selector:
    app: alexgo-server
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
